--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,24 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>A-Frame で超簡単 AR</title>
+    <title>A-Frame で AR</title>
   </head>
   <body style="margin:0px; overflow:hidden;">
-    <!-- A-Frame ライブラリの読み込み -->
-    <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-    <!-- AR.js ライブラリの読み込み -->
-    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+    <script src="https://aframe.io/releases/0.9.1/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.0/aframe/build/aframe-ar.js"></script>
 
     <!-- A-Frame の VR空間に AR.js を紐づける（デバッグUIは非表示） -->
-    <a-scene embedded arjs="debugUIEnabled:false;">
+    <a-scene embedded arjs="debugUIEnabled:false;trackingMethod:best;" vr-mode-ui="enabled: false">
 
-      <!-- マーカーを登録（プリセットされている「hiro」マーカー） -->
+      <a-assets>
+        <a-asset-item id="earth_ball-obj" src="model_obj/earth_ball/earth_ball.obj"></a-asset-item>
+        <a-asset-item id="earth_ball-mtl" src="model_obj/earth_ball/earth_ball.mtl"></a-asset-item>
+      </a-assets>
+
+      　　<!-- こっからARの世界。マーカー上になにを展開するかを書く -->
       <a-marker preset="hiro">
-        <!-- マーカーの場所に箱を置く（見やすいようにワイヤーフレーム表示） -->
-        <a-box position="0 0.5 0" wireframe="true"></a-box>
+        <a-obj-model id="earth_ball" src="#earth_ball-obj" mtl="#earth_ball-mtl" position="0 0 0"  scale="0.01 0.01 0.01" rotation="0 0 0"></a-obj-model>
+        <a-text value="地球！！" position="0 1.3 0" align="center"></a-text>
       </a-marker>
 
       <!-- AR用のカメラを置く -->
