修正をコミット

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,9 @@
 
       　　<!-- こっからARの世界。マーカー上になにを展開するかを書く -->
       <a-marker preset="hiro">
-        <a-obj-model id="earth_ball" src="#earth_ball-obj" mtl="#earth_ball-mtl" position="0 0 0"  scale="0.01 0.01 0.01" rotation="0 0 0"></a-obj-model>
-        <a-text value="地球！！" position="0 1.3 0" align="center"></a-text>
+        <!-- <a-obj-model id="earth_ball" src="#earth_ball-obj" mtl="#earth_ball-mtl" position="0 0 0"  scale="0.01 0.01 0.01" rotation="0 0 0"></a-obj-model>
+        <a-text value="地球！！" position="0 1.3 0" align="center"></a-text> -->
+        <a-image src="./imgs/DSC_0073.JPG"></a-image>
       </a-marker>
 
       <!-- AR用のカメラを置く -->
