--- a/public/markerless.html
+++ b/public/markerless.html
@@ -3,6 +3,8 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.0/aframe/build/aframe-ar.js"></script>
 
 <script>
+var v = null;
+
 AFRAME.registerComponent('registerevents', {
 	init: function () {
 		var marker = this.el;
@@ -11,12 +13,37 @@ AFRAME.registerComponent('registerevents', {
 			console.log('markerFound', markerId);
 			// TODO: Add your own code here to react to the marker being found.
 			this.markerVisible = true;
+			v = document.querySelector('#flower');
 		});
 		marker.addEventListener('markerLost', function() {
 			var markerId = marker.id;
 			console.log('markerLost', markerId);
 			// TODO: Add your own code here to react to the marker being lost.
 			this.markerVisible = false;
+			v.pause();
+			v = null;
+		});
+	}
+});
+
+AFRAME.registerComponent('hiroevents', {
+	init: function () {
+		var marker = this.el;
+		console.log(marker.id);
+		marker.addEventListener('markerFound', function() {
+			var markerId = marker.id;
+			console.log('markerFound', markerId);
+			// TODO: Add your own code here to react to the marker being found.
+			this.markerVisible = true;
+			v = document.querySelector('#dish');
+		});
+		marker.addEventListener('markerLost', function() {
+			var markerId = marker.id;
+			console.log('markerLost', markerId);
+			// TODO: Add your own code here to react to the marker being lost.
+			this.markerVisible = false;
+			v.pause();
+			v = null;
 		});
 	}
 });
@@ -25,13 +52,17 @@ AFRAME.registerComponent('registerevents', {
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; trackingMethod: best;' vr-mode-ui="enabled: false">
 		<a-assets>
-				<video
-					id="flower"
-					loop="true"
-					src="./videos/580042174.026765.mp4"
-				></video>
-			</a-assets>
-
+			<video
+				id="flower"
+				loop="true"
+				src="./videos/580042174.026765.mp4"
+			></video>
+			<video
+				id="dish"
+				loop="true"
+				src="./videos/720p.mp4"
+			></video>
+		</a-assets>
 
 		<a-marker
 			id="gahara"
@@ -39,24 +70,34 @@ AFRAME.registerComponent('registerevents', {
 			smooth="true"
 			type='pattern'
 			url='./marker/pattern-23f7869a1a1858c788fc690c19d8c6120762ad54-700.patt'
-		>
+		>	
 			<a-entity
 				geometry="primitive: plane"
 				material="src: #flower;"
-				position="0 0.5 0" scale="1 1 1" rotation="-90 0 0"
+				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
+			></a-entity>
+		</a-marker>
+		<a-marker
+			id="hiro"
+			hiroevents
+			smooth="true"
+			preset="hiro">
+		>	
+			<a-entity
+				geometry="primitive: plane"
+				material="src: #dish;"
+				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
 			></a-entity>
 		</a-marker>
 		<a-camera-static/>
   </a-scene>
 </body>
 <script>
-var v = document.querySelector('#flower');
-window.addEventListener('click', function () {
+window.addEventListener('click', function(){
 	if(v.paused){
 		v.play();
 	}else{
 		v.pause();
 	}
 });
-
 </script>
