--- a/public/markerless.html
+++ b/public/markerless.html
@@ -1,53 +1,10 @@
 <!-- include A-Frame obviously -->
 <script src="https://aframe.io/releases/0.9.1/aframe.min.js"></script>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.0/aframe/build/aframe-ar.js"></script>
-
 <script>
 var v = null;
-
-AFRAME.registerComponent('registerevents', {
-	init: function () {
-		var marker = this.el;
-		marker.addEventListener('markerFound', function() {
-			var markerId = marker.id;
-			console.log('markerFound', markerId);
-			// TODO: Add your own code here to react to the marker being found.
-			this.markerVisible = true;
-			v = document.querySelector('#flower');
-		});
-		marker.addEventListener('markerLost', function() {
-			var markerId = marker.id;
-			console.log('markerLost', markerId);
-			// TODO: Add your own code here to react to the marker being lost.
-			this.markerVisible = false;
-			v.pause();
-			v = null;
-		});
-	}
-});
-
-AFRAME.registerComponent('hiroevents', {
-	init: function () {
-		var marker = this.el;
-		console.log(marker.id);
-		marker.addEventListener('markerFound', function() {
-			var markerId = marker.id;
-			console.log('markerFound', markerId);
-			// TODO: Add your own code here to react to the marker being found.
-			this.markerVisible = true;
-			v = document.querySelector('#dish');
-		});
-		marker.addEventListener('markerLost', function() {
-			var markerId = marker.id;
-			console.log('markerLost', markerId);
-			// TODO: Add your own code here to react to the marker being lost.
-			this.markerVisible = false;
-			v.pause();
-			v = null;
-		});
-	}
-});
 </script>
+<script src="./registevents.js"></script>
 
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; trackingMethod: best;' vr-mode-ui="enabled: false">
@@ -81,7 +38,7 @@ AFRAME.registerComponent('hiroevents', {
 			id="hiro"
 			hiroevents
 			smooth="true"
-			preset="hiro">
+			preset="hiro"
 		>	
 			<a-entity
 				geometry="primitive: plane"
