--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>A-Frame で AR</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <title>vega</title>
   </head>
-  <body style="margin:0px; overflow:hidden;">
-    <script src="https://aframe.io/releases/0.9.1/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.0/aframe/build/aframe-ar.js"></script>
-
-    <!-- A-Frame の VR空間に AR.js を紐づける（デバッグUIは非表示） -->
-    <a-scene embedded arjs="debugUIEnabled:false; trackingMethod:best;" vr-mode-ui="enabled: false">
-
-      <a-assets>
-        <a-asset-item id="earth_ball-obj" src="model_obj/earth_ball/earth_ball.obj"></a-asset-item>
-        <a-asset-item id="earth_ball-mtl" src="model_obj/earth_ball/earth_ball.mtl"></a-asset-item>
-      </a-assets>
-
-      　　<!-- こっからARの世界。マーカー上になにを展開するかを書く -->
-      <a-marker preset="hiro">
-        <!-- <a-obj-model id="earth_ball" src="#earth_ball-obj" mtl="#earth_ball-mtl" position="0 0 0"  scale="0.01 0.01 0.01" rotation="0 0 0"></a-obj-model>
-        <a-text value="地球！！" position="0 1.3 0" align="center"></a-text> -->
-        <a-image src="./imgs/DSC_0073.JPG"></a-image>
-      </a-marker>
-
-      <!-- AR用のカメラを置く -->
-      <a-entity camera></a-entity>
-
-    </a-scene>
+  <body>
+    <noscript>
+      <strong>We're sorry but vega doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
   </body>
 </html>
