動画を追加

--- a/public/markerless.html
+++ b/public/markerless.html
@@ -12,16 +12,81 @@ var v = null;
 			<video
 				id="maedori"
 				loop="true"
-				src="./videos/maedori.mp4"
+				src="./videos/maedori480.mp4"
+			></video>
+			<video
+				id="ep01"
+				loop="true"
+				src="./videos/ep_01.mp4"
+			></video>
+			<video
+				id="ep02"
+				loop="true"
+				src="./videos/ep_02.mp4"
+			></video>
+			<video
+				id="greeting"
+				loop="true"
+				src="./videos/greeting.mp4"
+			></video>
+			<video
+				id="greeting_A"
+				loop="true"
+				src="./videos/greeting_A.mp4"
+			></video>
+			<video
+				id="greeting_B"
+				loop="true"
+				src="./videos/greeting_B.mp4"
+			></video>
+			<video
+				id="greeting_C"
+				loop="true"
+				src="./videos/greeting_C.mp4"
+			></video>
+			<video
+				id="greeting_D"
+				loop="true"
+				src="./videos/greeting_D.mp4"
+			></video>
+			<video
+				id="greeting_E"
+				loop="true"
+				src="./videos/greeting_E.mp4"
+			></video>
+			<video
+				id="greeting_F"
+				loop="true"
+				src="./videos/greeting_F.mp4"
+			></video>
+			<video
+				id="greeting_G"
+				loop="true"
+				src="./videos/greeting_G.mp4"
+			></video>
+			<video
+				id="greeting_H"
+				loop="true"
+				src="./videos/greeting_H.mp4"
+			></video>
+			<video
+				id="mathQuiz"
+				loop="true"
+				src="./videos/mathQuiz.mp4"
+			></video>
+			<video
+				id="oneQoneA"
+				loop="true"
+				src="./videos/oneQoneA.mp4"
 			></video>
 		</a-assets>
 
 		<a-marker
 			id="maedori"
-			maedorievents
+			maedori_events
 			smooth="true"
 			type='pattern'
-			url='./marker/pattern-20191011_maedori.patt'
+			url='./marker/pattern-maedori.patt'
 		>	
 			<a-entity
 				geometry="primitive: plane"
@@ -29,6 +94,177 @@ var v = null;
 				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
 			></a-entity>
 		</a-marker>
+		<a-marker
+			id="ep01"
+			ep01_events
+			smooth="true"
+			type='pattern'
+			url='./marker/pattern-ep_01.patt'
+		>	
+			<a-entity
+				geometry="primitive: plane"
+				material="src: #ep01;"
+				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
+			></a-entity>
+		</a-marker>
+		<a-marker
+			id="ep02"
+			ep02_events
+			smooth="true"
+			type='pattern'
+			url='./marker/pattern-ep_02.patt'
+		>	
+			<a-entity
+				geometry="primitive: plane"
+				material="src: #ep02;"
+				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
+			></a-entity>
+		</a-marker>
+		<a-marker
+			id="greeting"
+			greeting_events
+			smooth="true"
+			type='pattern'
+			url='./marker/pattern-greeting.patt'
+		>	
+			<a-entity
+				geometry="primitive: plane"
+				material="src: #greeting;"
+				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
+			></a-entity>
+		</a-marker>
+
+		<a-marker
+			id="greeting_A"
+			greeting_a_events
+			smooth="true"
+			type='pattern'
+			url='./marker/pattern-greeting_A.patt'
+		>	
+			<a-entity
+				geometry="primitive: plane"
+				material="src: #greeting_A;"
+				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
+			></a-entity>
+		</a-marker>
+		<a-marker
+			id="greeting_B"
+			greeting_b_events
+			smooth="true"
+			type='pattern'
+			url='./marker/pattern-greeting_B.patt'
+		>	
+			<a-entity
+				geometry="primitive: plane"
+				material="src: #greeting_B;"
+				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
+			></a-entity>
+		</a-marker>
+		<a-marker
+			id="greeting_C"
+			greeting_c_events
+			smooth="true"
+			type='pattern'
+			url='./marker/pattern-greeting_C.patt'
+		>	
+			<a-entity
+				geometry="primitive: plane"
+				material="src: #greeting_C;"
+				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
+			></a-entity>
+		</a-marker>
+		<a-marker
+			id="greeting_D"
+			greeting_d_events
+			smooth="true"
+			type='pattern'
+			url='./marker/pattern-greeting_D.patt'
+		>	
+			<a-entity
+				geometry="primitive: plane"
+				material="src: #greeting_D;"
+				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
+			></a-entity>
+		</a-marker>
+		<a-marker
+			id="greeting_E"
+			greeting_e_events
+			smooth="true"
+			type='pattern'
+			url='./marker/pattern-greeting_E.patt'
+		>	
+			<a-entity
+				geometry="primitive: plane"
+				material="src: #greeting_E;"
+				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
+			></a-entity>
+		</a-marker>
+		<a-marker
+			id="greeting_F"
+			greeting_f_events
+			smooth="true"
+			type='pattern'
+			url='./marker/pattern-greeting_F.patt'
+		>	
+			<a-entity
+				geometry="primitive: plane"
+				material="src: #greeting_F;"
+				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
+			></a-entity>
+		</a-marker>
+		<a-marker
+			id="greeting_G"
+			greeting_g_events
+			smooth="true"
+			type='pattern'
+			url='./marker/pattern-greeting_G.patt'
+		>	
+			<a-entity
+				geometry="primitive: plane"
+				material="src: #greeting_G;"
+				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
+			></a-entity>
+		</a-marker>
+		<a-marker
+			id="greeting_H"
+			greeting_h_events
+			smooth="true"
+			type='pattern'
+			url='./marker/pattern-greeting_H.patt'
+		>	
+			<a-entity
+				geometry="primitive: plane"
+				material="src: #greeting_H;"
+				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
+			></a-entity>
+		</a-marker>
+		<a-marker
+			id="mathQuiz"
+			math_quiz_events
+			smooth="true"
+			type='pattern'
+			url='./marker/pattern-mathQuiz.patt'
+		>	
+			<a-entity
+				geometry="primitive: plane"
+				material="src: #mathQuiz;"
+				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
+			></a-entity>
+		</a-marker>
+		<a-marker
+			id="oneQoneA"
+			one_q_one_a_events
+			smooth="true"
+			type='pattern'
+			url='./marker/pattern-oneQoneA.patt'
+		>	
+			<a-entity
+				geometry="primitive: plane"
+				material="src: #oneQoneA;"
+				position="0 0.1 0" scale="1.2 1.2 1.2" rotation="-90 0 0"
+			></a-entity>
+		</a-marker>
+
 		<a-camera-static/>
   </a-scene>
 </body>
